# quant

./: INSTALL  LICENSE  Makefile  Markowitz_Portfolio.html  README  README.md  README.org  index.html  params.json
documentation/: Appendix-Charts.tex  Appendix-Portfolio.tex  Appendix-SourceCode.tex  Markowitz-Portfolio.tex  bibliography.bib  makefile
native/: CMakeLists.txt  run_Markowitz_Demos.sh
native/Portfolio/: CMakeLists.txt
native/Portfolio/include/: Figure.hxx  Portfolio.hxx  Series.hxx  quant.hxx
native/Portfolio/src/: Figure.cxx  Portfolio.cxx  Series.cxx  markowitz.cxx
native/Portfolio/test/: test1.cxx  test2.py
octave/: getStockData.m  installPackages.m  markowitzDemo.m  markowitzPortfolio.m  testScript.m
resources/portfolios/: portfolio-AAPL_JPM_LMT_XOM-25.xml  portfolio-ABT_BA_CVX_GE-25.xml  portfolio-AMZN_ORCL_SO-20.xml
setup/: Doxygen.in  download-stock-data.sh  symbols.list  yum-install.sh
